Start addMultiple with baseline of code from addWatch.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1072,7 +1072,8 @@ input[type='text']:focus {
   }
 }
 
-#add-watch-page {
+#add-watch-page,
+#add-multiple-page{
   .day-select {
     width: 110px;
   }
