Add buttons to multiple page.

--- a/app/views/addMultipleWatches.html
+++ b/app/views/addMultipleWatches.html
@@ -40,13 +40,13 @@
       </div>
     </div>
 
+    <div class="controle-group"><a class="add-watch-btn" ng-click="addWatch()">Add One Watch</a></div>
+    <br>
     <div class="control-group">
       <div class="controls">
-        <button type="submit" class="btn" ng-click="addWatch()">Add Crowd Watch</button>
+        <button type="submit" class="btn" ng-click="submitWatches()">Save All Watches</button>
       </div>
     </div>
   </form>
-  <br>
-  <a class="add-multiple" ng-click="addMultiple()">Add Multiple Spots</a>
 </div>
 
