--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1084,7 +1084,7 @@ input[type='text']:focus {
     width: 60px;
   }
 
-  .add-multiple {
+  .add-multiple, .add-watch-btn {
     margin: 0 0 0 40px;
 
     &:hover {
