Restyle crowdgraph on add-multiple-watches page.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1093,6 +1093,18 @@ input[type='text']:focus {
   }
 }
 
+#add-multiple-page{
+  .visualize {
+    text-align: left;
+  }
+  .crowd-factor {
+    margin: 20px 0;
+  }
+  .crowd-visuals {
+    padding-bottom: 10px;
+  }
+}
+
 #add-spot-page,
 #edit-spot-page {
 
