--- a/app/views/addMultipleWatches.html
+++ b/app/views/addMultipleWatches.html
@@ -59,7 +59,7 @@
       </div>
     </div>
 
-    <div class="controle-group"><a class="add-watch-btn" ng-click="addWatch()">Add One Watch</a></div>
+    <div class="controle-group"><a class="add-watch-btn" ng-click="addWatch()">Add Watch</a></div>
     <br>
     <div class="control-group">
       <div class="controls">
