Add cf_status to watch in addMultiple controller.

--- a/app/views/addMultipleWatches.html
+++ b/app/views/addMultipleWatches.html
@@ -26,8 +26,10 @@
   <div class="watch-hours" ng-repeat="watch in watchHours">
     <h5>
       {{watch.start.day}} {{watch.start.hour}} {{watch.start.meridiem}} 
-      <span class="to">To</span> 
+      <span class="separator">to</span> 
       {{watch.stop.day}} {{watch.stop.hour}} {{watch.stop.meridiem}}
+      <span class="separator">-</span>
+      <span class="{{watch.cf_status}}">{{watch.cf_status}}</span>
     </h5>
     <a class="clickable" ng-click="deleteHours($index)">delete</a>
   </div>
