Style watches in addMultiple controller.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1103,6 +1103,14 @@ input[type='text']:focus {
   .crowd-visuals {
     padding-bottom: 10px;
   }
+
+  .separator {
+    font-weight: normal;
+  }
+
+  h5 {
+    display: inline-block;
+  }
 }
 
 #add-spot-page,
