--- a/app/views/addSpot.html
+++ b/app/views/addSpot.html
@@ -28,6 +28,12 @@
       </div>
     </div>
     <div class="control-group">
+      <label class="control-label" for="spotAddress2">Address 2</label>
+      <div class="controls">
+        <input class="" type="text" id="spotAddress2" ng-model="address2" placeholder="Address 2">
+      </div>
+    </div>
+    <div class="control-group">
       <label class="control-label" for="spotCity">City</label>
       <div class="controls">
         <input class="{{validForm.city}}" type="text" id="spotCity" ng-model="city" placeholder="City">
