--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -8,6 +8,7 @@
 
       <div class="details-left">
         <h4>{{spot.location.address}}</h4>
+        <h4 ng-show="spot.location.address2">{{spot.location.address2}}</h4>
         <h4 ng-cloak>{{spot.location.city}}, {{spot.location.state_code}} {{spot.location.postal_code}}</h4>
         <div class="rating">
           <div class="stars">
