--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -78,9 +78,11 @@ button, .btn {
 
 a {
   text-decoration: none;
+  color: $comp1-dark;
   
   &:hover {
     text-decoration: none;
+    color: $comp1-light;
   }
 }
 
@@ -726,43 +728,50 @@ input[type='text']:focus {
     background-color: $acc-light;
     border-radius: 10px;
     padding: 10px 15px;
+    height: 280px;
 
     .watch-comment-header {
       font-weight: bold;
       margin-left: 18px;
     }
 
-    h2 {
-      margin: 0 0 10px 0;
+    .spot-name {
+      margin: 0;
     }
 
     .details-left {
       display: inline-block;
       float: left;
+      height: 183px;
       max-width: 300px;
       margin-top: -10px;
       vertical-align: top;
+      color: $acc-dark;
+    }
 
-      h4 {
-        margin-left: 10px;
-      }
+    .spot-address {
+      margin: 5px 0 0 15px;
+      color: $acc-dark; 
+      height: 60px;
+      text-overflow: ellipsis;
 
-      .rating {
-        margin: 30px 0 25px 0;
+      h5 {
+        margin: 0;
       }
+    }
+
+    .rating {
+      margin: 5px 0 50px 0;
     }
 
     .details-right {
       display: inline-block;
       margin: -20px 0 0 20px;
       vertical-align: top;
+      height: 182px;
 
       h3 {
         margin-bottom: 0;
-      }
-
-      .spot-types {
-        margin: 0 0 0 10px;
       }
 
       h5 {
@@ -770,10 +779,24 @@ input[type='text']:focus {
       }
     }
 
+    .current-status {
+      padding: 5px 0 0 0;
+    }
+     
+    .spot-types {
+      margin: 0 0 0 10px;
+    }
+
+    .yelp-link {
+      vertical-align: bottom;
+    }
+
     .text-ad {
       background-color: $acc-med;
       //margin-top: -20px;
       width: 100%;
+      height: 60px;
+      min-width: 468px;
       
       a {
         color: $text-light;
@@ -789,7 +812,7 @@ input[type='text']:focus {
       }
 
       .author {
-        margin: -20px 0 0 40px;
+        margin: -30px 0 0 40px;
       }
     }
   }
@@ -798,7 +821,6 @@ input[type='text']:focus {
     display: inline-block;
     font-size: 18px;
     font-weight: bold;
-    padding: 10px;
     text-align: center;
   }
 
