--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -728,7 +728,7 @@ input[type='text']:focus {
     background-color: $acc-light;
     border-radius: 10px;
     padding: 10px 15px;
-    height: 280px;
+    height: 300px;
 
     .watch-comment-header {
       font-weight: bold;
@@ -742,17 +742,20 @@ input[type='text']:focus {
     .details-left {
       display: inline-block;
       float: left;
-      height: 183px;
+      height: 202px;
       max-width: 300px;
       margin-top: -10px;
       vertical-align: top;
       color: $acc-dark;
     }
 
+    .details-top {
+      height: 100px;
+    }
+
     .spot-address {
       margin: 5px 0 0 15px;
       color: $acc-dark; 
-      height: 60px;
       text-overflow: ellipsis;
 
       h5 {
@@ -768,7 +771,7 @@ input[type='text']:focus {
       display: inline-block;
       margin: -20px 0 0 20px;
       vertical-align: top;
-      height: 182px;
+      height: 202px;
 
       h3 {
         margin-bottom: 0;
@@ -780,11 +783,28 @@ input[type='text']:focus {
     }
 
     .current-status {
-      padding: 5px 0 0 0;
+      height: 173px;
     }
      
+    .current-status-header{
+      display: inline-block;
+      margin: 5px 0 0 0;
+    }
+
+    .current-status-info {
+      display: inline-block;
+      margin: -5px 0 0 20px;
+    }
+
+    .status {
+    }
+
     .spot-types {
-      margin: 0 0 0 10px;
+      height: 100px;
+      vertical-align: bottom;
+      display: table-cell;
+
+     // margin: 0 0 0 10px;
     }
 
     .yelp-link {
