--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -32,12 +32,12 @@
         <div class="current-status">
           <div class="current-status-header">
             <h4>Current Status: </h4>
-            <h5>({{current_status}})</h5>
+            <h5 class="current-status-time">({{current_status}})</h5>
           </div>
           <div class="current-status-info">
             <h2 class="status {{current_cflabel | lowercase}}">{{current_cflabel}}</h2>
           </div>
-          <p><span class="watch-comment-header">{{current_user}} says:</span> {{current_comment}}</p>
+          <p class="watch-comment" ng-show="current_user"><span class="watch-comment-user">{{current_user}}</span> says: {{current_comment}}</p>
         </div>
         <div class="yelp-link">
           <a ng-href="{{spot.yelpLink}}"><h4>Checkout Yelp reviews</h4></a>
