--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -44,7 +44,7 @@
         </div>
       </div>
 
-      <div class="text-ad">
+      <div class="ad-text">
         <h6>Ad</h6>
         <a ng-href="http://www.amazon.com/gp/product/0449908704/ref=as_li_ss_tl?ie=UTF8&camp=1789&creative=390957&creativeASIN=0449908704&linkCode=as2&tag=coding4kicks-20">
           <h5>The Best and the Brightest</h5>
