Change crowdgraph labels.

--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -97,17 +97,17 @@
             <div class="empty">
               <div class="empty-square color">
               </div>
-              <h5>Almost Empty</h5>
+              <h5>Empty</h5>
             </div>
             <div class="average">
               <div class="average-square color">
               </div>
-              <h5>Average Traffic</h5>
+              <h5>Average</h5>
             </div>
             <div class="herd">
               <div class="herd-square color">
               </div>
-              <h5>Herd Alert</h5>
+              <h5>Packed</h5>
             </div>
             <div class="none">
               <div class="none-square color">
@@ -120,7 +120,7 @@
             <div class="few">
               <div class="few-square color">
               </div>
-              <h5>A Few People</h5>
+              <h5>Few</h5>
             </div>
             <div class="crowded">
               <div class="crowded-square color">
