--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1238,24 +1238,30 @@ input[type='text']:focus {
 *** Crowd Factor 
 *******************/
 .crowd-factor {
-  background-image: linear-gradient(to bottom, #bbb, #aaa);
+  background-image: linear-gradient(to bottom, #eeeeee, #cccccc);
   border: 2px solid #6E6E6E;
   border-radius: 10px 10px 10px 10px;
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2) inset, 0 1px 2px rgba(0, 0, 0, 0.05);
   margin: 20px auto;
+  padding: 10px;
   text-align: center;
   width: 80%;
-
-  h3, h4 {
-    display: inline-block;
-    padding: 0 10px; 
-    margin: 10px 0 0 0;
-  }
+  color: $acc-dark;
 
   .current-time {
-    background: $acc-med;
-    border: 1px solid;
-    border-radius: 5px;
+    display: inline-block;
+    padding-right: 10px;
+  }
+
+  .watch-count {
+    display: inline-block;
+  }
+
+  .time {
+    color: $text-dark;
+    //background: $acc-med;
+    //border: 1px solid;
+    //border-radius: 5px;
     padding: 5px;
   }
 
@@ -1272,10 +1278,6 @@ input[type='text']:focus {
 
     &:nth-child(2) {
       z-index: 40;
-
-      td {
-        //background: red;
-      }
     }
 
     &:nth-child(3) {
@@ -1287,14 +1289,12 @@ input[type='text']:focus {
     }
   }
 
-  h5 {
+  .block-day {
     margin: 10px 0 0 0;
     width: 165px;
   }
 
   td {
-    //background: blue;
-    //border: 1px solid black;
     height: 20px;
     text-align: center;
     width: 20px;
@@ -1339,7 +1339,7 @@ input[type='text']:focus {
     }
 
     .row2 {
-      margin-top: -40px;
+      margin-top: -50px;
     }
   }
 
