--- a/app/views/spot.html
+++ b/app/views/spot.html
@@ -175,15 +175,15 @@
     <div class="side-col">
       <div class="find-nearby">
         <h3>Find Nearby:</h3>
-        <div class="nearby-type">
+        <div class="nearby-type" ng-click="findNearby('food')">
           <img class="b4cm-icon" src="../images/b4cm-icon-food.png">
           <h4>Food</h4>
         </div>
-        <div class="nearby-type">
+        <div class="nearby-type" ng-click="findNearby('study')">
           <img class="b4cm-icon" src="../images/b4cm-icon-study.png">
           <h4>Study</h4>
         </div>
-        <div class="nearby-type">
+        <div class="nearby-type" ng-click="findNearby('social')">
           <img class="b4cm-icon" src="../images/b4cm-icon-social.png">
           <h4>Social</h4>
         </div>
