--- a/app/views/listings.html
+++ b/app/views/listings.html
@@ -1,9 +1,17 @@
 <div id="listings-page">
   <div class="title-bar clearfix">
     <div class="main-col">
-      <img class="b4cm-icon" ng-src="../images/b4cm-icon-{{listings.type | lowercase}}.png">
-      <h2 class="listing-type">{{listings.type}}</h2>
-      <h3 class="listing-location">{{listings.displayAddress}}</h3>
+      <div class="top">
+        <img class="b4cm-icon" ng-src="../images/b4cm-icon-{{listings.type | lowercase}}.png">
+        <h2 class="listing-type">{{listings.type}}</h2>
+        <h3 class="listing-location">{{listings.displayAddress}}</h3>
+      </div>
+      <div class="bottom">
+        <h6 class="listing-nums" ng-hide="noSpots">{{startIndex}}-{{startIndex + spots.length - 1}} of {{numReturns}}</h6>
+        <a  ng-click="addSpot()">
+          <button class="btn add-spot-btn">Add Spot</button>
+        </a>
+      </div>
     </div>
     <div class="side-col">
       <div class="ad-book">
@@ -20,10 +28,6 @@
   <div class="page">
 
     <div class="listings main-col">
-      <h6 ng-hide="noSpots">{{startIndex}}-{{startIndex + spots.length - 1}} of {{numReturns}}</h6>
-      <a  ng-click="addSpot()">
-        <button class="btn add-spot-btn">Add Spot</button>
-      </a>
       <h2 ng-show="noSpots">No spots of this type for your search area.  Help us out and add a spot!</h2>
       <div class="listing" ng-click="getSpot(spot.id)" ng-repeat="spot in spots">
         <div class="rank">
