--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -412,7 +412,7 @@ input[type='text']:focus {
   }
 
   .spot-types {
-    @include page-element(10px, 0, center, top);
+    @include page-element(10px, 5px, center, top);
 
     .spots {
       padding: 0 0 0 10px;
